@@ -1,3 +1,13 @@
+2009-06-24  Nick Garnett  <nickg@ecoscentric.com>
+
+	* src/malloc.cxx (cyg_memalloc_heap_reinit): Added this function
+	to reinitialize the heap to a new arena. This should be done
+	during system startup and is present mainly for the use of
+	RedBoot.
+	Permit configurations with multi-region heaps to build.
+	[Imported from eCosPro sources, mainly to support use of
+	filesystems in RedBoot].
+	
 2009-02-03  Simon Kallweit  <simon.kallweit@intefo.ch>
 
 	* include/mvarimpl.inl:
@@ -395,7 +405,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2009 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
